src/serve/tests/requests/update/obj/snapshots/basiliq__serve__tests__requests__update__obj__path__type_relationships.snap
---
source: basiliq/src/serve/tests/requests/update/obj/path.rs
expression: res

---
{
  "errors": {
    "id": "[error id]",
    "status": 400,
    "title": "CibouletteMissingId",
    "detail": "Missing `id` field for a resource identifier"
  }
}
